--- a/ios/RNCodeTest/Info.plist
+++ b/ios/RNCodeTest/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>RELEASE_SERVICE_KEY</key>
+	<string>le475jUm1D</string>
 	<key>SERVICE_KEY</key>
 	<string>MmHsCMUt57</string>
 	<key>UIAppFonts</key>
